--- a/renderer.html
+++ b/renderer.html
@@ -5,10 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ModernWeb Taipei</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
+    #container {
+      height: 100vh;
+      width: 100vw;
+    }
+
+    .monaco-editor {
+      height: 100%;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
   <div id="container">
-    <h1>👋 Hello World!</h1>
   </div>
+  <script>
+    require('./renderer.js')
+  </script>
 </body>
 </html>
